Use ASSET_ROOT.

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -7,7 +7,8 @@
     <a-scene>
       <a-sky color='#def'></a-sky>
       <a-entity player="maria" material="color: #C03546"></a-entity>
-      <a-entity rotation="-90 0 0" geometry="primitive: plane; width: 64; height: 64;" material="repeat: 64 64; src: url(/images/grid.png)"></a-entity>
+
+      <a-entity rotation="-90 0 0" geometry="primitive: plane; width: 64; height: 64;" material="repeat: 64 64; src: url(https://assets-scenevr-com.s3-us-west-1.amazonaws.com/prerelease/images/grid.png)"></a-entity>
     </a-scene>
   </body>
 </html>
